# edge-lib

./: README.md  depends.py  edge.py  edge_dataclass_to_pydantic.py  edge_model_gen.py  pyd.py  tasks.py  test.py
pydantic-fastapi-workflow/: .envrc  README.md  main.py  merge_codegen_files.py  pyproject.toml  tasks.py
pydantic-fastapi-workflow/dbschema/: default.esdl
pydantic-fastapi-workflow/src/sharing/api/: app.py  dependency.py  queries_merged.py
pydantic-fastapi-workflow/src/sharing/generator/: README.md  __init__.py  __main__.py  generator.py  models.py  template.py.jinja
tests/: conftest.py
tests/functional/: conftest.py  test_edgedb_fixture.py
